--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -8,6 +8,7 @@
     tools:context=".common.ViewReportActivity">
 
     <ScrollView
+        android:id="@+id/scrollView_observations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,9 +29,11 @@
 <!--                android:layout_height="wrap_content"-->
 <!--                android:layout_width="match_parent">-->
                 <TableRow style="@style/CommonHeader">
-                    <TextView android:text="Patient Information"
+                    <TextView android:text="@string/text_report_information"
                         android:layout_weight="0.2"
-                        style="@style/CommonHeaderText" />
+                        android:layout_gravity="center_horizontal"
+                        style="@style/CommonHeaderText"
+                        app:drawableEndCompat="@drawable/ic_search_icon" />
                 </TableRow>
 
                 <TableRow style="@style/BodyRow">
@@ -708,5 +711,27 @@
 
     </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/scrollView_observations"
+        app:layout_constraintLeft_toLeftOf="@id/scrollView_observations"
+        app:layout_constraintRight_toRightOf="@id/scrollView_observations">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Download Report"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="View Normal Range"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
