--- a/app/src/main/res/layout/single_report.xml
+++ b/app/src/main/res/layout/single_report.xml
@@ -62,7 +62,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_share"/>
                 <ImageView
