--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -11,17 +11,17 @@
         android:id="@+id/scrollView_observations"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ll_btns1">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TableLayout
+            <TableLayout
             android:id="@+id/tablelayout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
@@ -703,43 +703,41 @@
 <!--                    android:layout_weight="0.1"-->
 <!--                    style="@style/BodyText" />-->
 <!--            </TableRow>-->
+<!--        </TableLayout>-->
         </TableLayout>
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
-
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <LinearLayout
-        android:id="@+id/ll_btns1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="@id/scrollView_observations"
-        app:layout_constraintRight_toRightOf="@id/scrollView_observations"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/startup_background_color"
-            android:textColor="@color/colorPrimaryDark"
+            android:padding="10dp"
             android:layout_weight="1"
-            android:layout_margin="8dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/white"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Download Report"/>
 
         <Button
+            android:id="@+id/btn_normal_range"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
             android:layout_height="wrap_content"
-            android:background="@color/startup_background_color"
+            android:padding="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
-            android:text="View Normal Range"/>
+            android:onClick="createDialog"
+            android:text="Normal Range" />
 
     </LinearLayout>
 
