--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -723,6 +723,7 @@
             android:padding="10dp"
             android:layout_weight="1"
             android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
             android:text="Download Report"/>
@@ -733,6 +734,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
