--- a/app/src/main/res/layout/popup_normal_range.xml
+++ b/app/src/main/res/layout/popup_normal_range.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/startup_background_color"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TableLayout
         android:layout_height="wrap_content"
