--- a/app/src/main/res/layout/fragment_add_reports.xml
+++ b/app/src/main/res/layout/fragment_add_reports.xml
@@ -105,6 +105,7 @@
             android:src="@drawable/ic_lady_with_report"
             app:layout_constraintBottom_toTopOf="@id/btn_add_report"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
             android:foregroundGravity="center_horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
