--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -208,16 +208,16 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="14sp"
-        android:gravity="center_horizontal"
-        android:text="&#169; DigiReport 2021"/>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:textColor="@color/colorPrimaryDark"-->
+<!--        android:textSize="14sp"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:text="&#169; DigiReport 2021"/>-->
 
 <!--    </GridLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
