--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -4,17 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/startup_background_color"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".common.ViewReportActivity">
 
     <ScrollView
         android:id="@+id/scrollView_observations"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toTopOf="@id/ll_btn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -710,6 +712,7 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/ll_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -718,12 +721,14 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
+            android:id="@+id/btn_downloadreport"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_weight="1"
             android:layout_marginEnd="5dp"
             android:layout_marginStart="5dp"
+            android:visibility="gone"
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
             android:text="Download Report"/>
@@ -732,7 +737,7 @@
             android:id="@+id/btn_normal_range"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="8dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
