--- a/app/src/main/res/layout/template_normal_report_info_cell.xml
+++ b/app/src/main/res/layout/template_normal_report_info_cell.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
     android:id="@+id/template_report_info_cell"
-    style="@style/BodyText"
-    android:layout_weight="0.5"
+    style="@style/CommonHeaderText"
     xmlns:android="http://schemas.android.com/apk/res/android" />
