--- a/app/src/main/res/layout/activity_edit_report.xml
+++ b/app/src/main/res/layout/activity_edit_report.xml
@@ -1,40 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/startup_background_color"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".common.ViewReportActivity">
+    tools:context=".common.EditReportActivity">
+
+    <LinearLayout
+        android:id="@+id/linlaHeaderProgress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone" >
+
+        <ProgressBar
+            android:id="@+id/pbHeaderProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </ProgressBar>
+    </LinearLayout>
+
 
     <ScrollView
         android:id="@+id/scrollView_observations"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@id/ll_btn"
+        app:layout_constraintBottom_toTopOf="@id/ll_btns_save_discard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TableLayout
-            android:id="@+id/tablelayout"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+                android:id="@+id/tablelayout_edit_report"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
 
             </TableLayout>
-
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
-        android:id="@+id/ll_btn"
+        android:id="@+id/ll_btns_save_discard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -43,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
-            android:id="@+id/btn_edit_report"
+            android:id="@+id/btn_discard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -52,11 +70,10 @@
             android:layout_marginStart="5dp"
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
-            android:visibility="gone"
-            android:text="Edit Report"/>
+            android:text="Discard"/>
 
         <Button
-            android:id="@+id/btn_normal_range"
+            android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -66,7 +83,7 @@
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
             android:onClick="createDialog"
-            android:text="Normal Range" />
+            android:text="Save" />
 
     </LinearLayout>
 
