--- a/app/src/main/res/layout/activity_edit_report.xml
+++ b/app/src/main/res/layout/activity_edit_report.xml
@@ -73,7 +73,7 @@
             android:text="Discard"/>
 
         <Button
-            android:id="@+id/btn_save"
+            android:id="@+id/btn_save_report"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -82,7 +82,6 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:textColor="@color/colorPrimaryDark"
-            android:onClick="createDialog"
             android:text="Save" />
 
     </LinearLayout>
