--- a/app/src/main/res/layout/activity_hb_visualisation.xml
+++ b/app/src/main/res/layout/activity_hb_visualisation.xml
@@ -8,10 +8,10 @@
     android:background="@color/startup_background_color"
     tools:context=".common.HBVisualisationActivity">
 
-    <com.github.mikephil.charting.charts.BarChart
+    <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/barChart_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
