--- a/app/src/main/res/layout/activity_hb_visualisation.xml
+++ b/app/src/main/res/layout/activity_hb_visualisation.xml
@@ -9,10 +9,48 @@
     tools:context=".common.HBVisualisationActivity">
 
     <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/barChart_view"
+        android:id="@+id/lineChart_view"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:padding="10dp"
+            android:text="Share"
+            android:textColor="@color/colorPrimaryDark"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_save_graph"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:onClick="createDialog"
+            android:padding="8dp"
+            android:text="Save Report"
+            android:textColor="@color/colorPrimaryDark" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
