--- a/app/src/main/res/layout/fragment_my_reports.xml
+++ b/app/src/main/res/layout/fragment_my_reports.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/startup_background_color"
@@ -31,7 +32,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginTop="2dp"
         android:id="@+id/recycler_view_med_list"/>
+
+    <Button
+        android:id="@+id/btn_hb_visualization"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:background="@color/white"
+        android:textColor="@color/colorPrimaryDark"
+        android:visibility="gone"
+        android:drawablePadding="10dp"
+        android:text="HB Visualization" />
 </LinearLayout>
