--- a/app/src/main/res/layout/fragment_my_reports.xml
+++ b/app/src/main/res/layout/fragment_my_reports.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -35,19 +35,40 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginTop="2dp"
-        android:id="@+id/recycler_view_med_list"/>
+        android:id="@+id/recycler_view_med_list"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_hb_visualization"
+        />
 
-    <Button
-        android:id="@+id/btn_hb_visualization"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingRight="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="5dp"
-        android:layout_marginStart="5dp"
-        android:background="@color/white"
-        android:textColor="@color/colorPrimaryDark"
-        android:visibility="gone"
-        android:drawablePadding="10dp"
-        android:text="HB Visualization" />
-</LinearLayout>
+<!--    <Button-->
+<!--        android:id="@+id/btn_hb_visualization"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:paddingRight="20dp"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:layout_marginEnd="5dp"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:background="@color/white"-->
+<!--        android:textColor="@color/colorPrimaryDark"-->
+<!--        android:visibility="gone"-->
+<!--        android:drawablePadding="10dp"-->
+<!--        android:text="HB Visualization" />-->
+
+        <Button
+            android:id="@+id/btn_hb_visualization"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:backgroundTint="@color/white"
+            android:padding="10dp"
+            android:gravity="center_horizontal"
+            android:text="Visualization"
+            android:textColor="@color/colorPrimaryDark"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
