--- a/app/src/main/res/layout/activity_visualisation.xml
+++ b/app/src/main/res/layout/activity_visualisation.xml
@@ -7,6 +7,19 @@
     android:background="@color/startup_background_color"
     tools:context=".common.VisualisationActivity">
 
+    <TextView
+        android:id="@+id/title_visualisation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Visualisation"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="28sp"
+        android:fontFamily="@font/circular_std_book"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_hb_visualisation"
         android:layout_width="wrap_content"
@@ -22,7 +35,7 @@
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_visualisation"
         app:layout_constraintRight_toLeftOf="@+id/cv_rbc_visualisation">
 
         <LinearLayout
@@ -65,7 +78,7 @@
         app:cardElevation="5dp"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_visualisation"
         app:layout_constraintStart_toEndOf="@id/cv_hb_visualisation"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -212,5 +225,16 @@
                 android:src="@drawable/ic_acc_settings" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:text="All the charts are made of MPAndroidChart Open Source Library"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
